# FPGA

./: msim_RUN.bat
LVDS_data_capture/sim/: compile.bat  modelsim.ini  readme.txt  simulate.bat  testbench.udo  testbench_compile.do  testbench_simulate.do  testbench_wave.do  vsim.wlf
LVDS_data_capture/src/: LVDS_capture.sv
LVDS_data_capture/tb/: testbench.sv
SPI/sim/: bat_for_rtl_SPI.bat  top_run_msim_rtl_verilog_tb_SPI.do  transcript  vsim.wlf
SPI/src/: spi_module.sv
SPI/tb/: tb_spi_module.sv
cometicus/prj/: clean.bat  make.bat  make.tcl
cometicus/scripts/: write_hw_files.tcl
conf_analog/src/: conf_path.sv
ibisARC/prj/: clean.bat  make.bat  make.tcl
ibisARC/src/c/libfacq/src/: CMakeLists.txt  axi_rw.c  facq.c  fsm.c  psp_init_functions.c  service_func.c
ibisARC/src/c/libfacq/test/: CMakeLists.txt
sim/: LVDS_capture_run_msim_rtl_verilog.do  batfile.bat  msim_transcript  top.svo  top_run_msim_gate_systemverilog.do  top_run_msim_rtl_verilog.do  top_run_msim_rtl_verilog.do.bak4  transcript  vsim.wlf
sim/gate_work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
sim/rtl_work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl  bat_for_rtl.bat  top_run_msim_rtl_verilog.do
spi_module/sim/: bat_for_rtl.bat  spi_module_run_msim_rtl_verilog.do  transcript  vsim.wlf
spi_module/src/: adc.sv  spi_module.asm.rpt  spi_module.done  spi_module.fit.rpt  spi_module.fit.summary  spi_module.flow.rpt  spi_module.jdi  spi_module.map.rpt  spi_module.map.summary  spi_module.pin  spi_module.qpf  spi_module.qsf  spi_module.qws  spi_module.sta.rpt  spi_module.sta.summary  spi_module.sv
spi_module/tb/: tb_spi_module.sv
src/: LVDS_capture.sv  _1ms.sv  _1ms.sv.bak  debouncing.sv  debouncing.sv.bak  main.sv  main.sv.bak  main_cntrl.sv  main_cntrl.sv.bak  seg7_control.sv  time_pkg.sv  time_pkg.sv.bak  timer.sv  timer.sv.bak  timer_ssms.sv  timer_ssms.sv.bak  top.done  top.flow.rpt  top.map.rpt  top.map.smsg  top.map.summary  top.out.sdc  top.qpf  top.qsf  top.qws  top_nativelink_simulation.rpt  transformer.sv  transformer.sv.bak
src/db/: .cmp.kpt  alt_u_div_a2f.tdf  alt_u_div_c2f.tdf  alt_u_div_g2f.tdf  alt_u_div_gve.tdf  alt_u_div_i2f.tdf  alt_u_div_kve.tdf  alt_u_div_mve.tdf  alt_u_div_o2f.tdf  alt_u_div_qse.tdf  alt_u_div_u2f.tdf  lpm_divide_05m.tdf  lpm_divide_35m.tdf  lpm_divide_3dm.tdf  lpm_divide_4am.tdf  lpm_divide_65m.tdf  lpm_divide_6dm.tdf  lpm_divide_hbm.tdf  lpm_divide_i3m.tdf  lpm_divide_l3m.tdf  lpm_divide_v4m.tdf  lpm_divide_vcm.tdf  prev_cmp_top.qmsg  sign_div_unsign_2nh.tdf  sign_div_unsign_3nh.tdf  (+160 more)
tb/: tb.sv  tb.sv.bak  testbench.sv  time_pkg.sv
(+1132 files in other folders)
